<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InstructionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instruction1View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction1_label" />

        <TextView
            android:id="@+id/instruction2View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction2_label" />

        <Button
            android:id="@+id/shoeListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoeList_label" />

    </LinearLayout>

</layout>